updated at: 2023-04-25 20:56, [VRChat向け]ゴールドベリーちゃん - 芭菜子のお店 - BOOTH

--- a/VRChat/99/949799.html
+++ b/VRChat/99/949799.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "D89Gt4zM1wOuh+fmoTVzS+Uq3to0UaF0f5UYX8c7+Vo="></script>
+    "vS0n05Odt/0xz3k/z9gttIOwBE5gun2Sp258QEB6ugA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]ゴールドベリーちゃん","description":"※VRCSDK3.0以前のSDKで作成していますのでSDK2を使うと良いです\n※↑通常衣装のPC版のみSDK３用を作成しました\n\n制作　oga\n twitter @oga_pleconia\n\nVRChatでの使用を想定したアバターモデルです\n必要なアセット（シェーダー、ダイナミックボーン、VRCSDK）をインポートするだけで\n揺れや表情付けがある程度調整されたアバターをアップロードすることができます\n\n\n---------------------------\nデータ内容\n\n◆G_Berry_MMS.unitypackage\nまんまるしぇーだー（みに@Mini_9321_VRさん作）同梱のパッケージ\n\n◆G_Berry_Cubed.unitypackage\nキューブドシェーダー用のパッケージ\n\n◆G_Berry_UTS2.unitypackage\nユニティちゃんトゥーンシェーダー2.0用パッケージ\n\n◆sozaiフォルダ\n元のfbxやテクスチャの素材などが入っています\n\n\n---------------------------\n仕様\n\nhumanoid対応ボーン\n表情切替はシェイプとオブジェクトで行う想定。顔周りのジョイント無し\n\n\n---------------------------\n・許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n\n・制限事項\n本データおよび本データの改変物を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）\n↑って最初書いてたけど別にいいよ☆","url":"https://booth.pm/ja/items/949799","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"150"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/949799/ad2ba75a-710b-4a86-bf2b-427e67678556_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D89Gt4zM1wOuh+fmoTVzS+Uq3to0UaF0f5UYX8c7+Vo="></script>
+    nonce="vS0n05Odt/0xz3k/z9gttIOwBE5gun2Sp258QEB6ugA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/949799/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               437
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/949799/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               437
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
