--- a/VRChat/10/949810.html
+++ b/VRChat/10/949810.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tlPipmfnQfrvLbGmV87WvlWC6yLwOmDLW5z1ZAhUO3U="></script>
+    "9kszzOUJ/qxru0+xwqEkV8Z5fBAImvntDdsLVwl3pIQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キャスケット帽子2.0＋耳飾りバージョン公開！　2019/03/27アップデート！　byもずくん","description":"もずくんの　キャスケット帽子\n作った人　もずくん　@mozukuumauma\n　　　（Twitterで報告もらえると超嬉しいです！）\n2018-07-27　投稿\n2018-10-23　更新　ハロウィン仕様テクスチャ追加とカラバリテクスチャ追加\n2019-01-26　大幅バージョンアップ2.0　詳細は下記\n2019-03-27　イアリングバージョン公開\n\n\n『2.0』\n・ポリゴン数表記・及び削減\n　商品詳細を△基準に、ポリゴン数の削減　これにより\n　　帽子　　△394\n　　リボン　△228　　へ\n・UV展開のし直し\n　新しくテクスチャを描かれていた方は対応してもらえると嬉しい\n・新しいテクスチャパターンの追加\n　いつものチェック柄を軸にパターンを追加・カラーバリエーションも各種4パターンで合計12パターン\n・FBXデータを2種付属\n　リボンメッシュを合成したものとそうでないものを追加\n・Unitypackageを追加\n　まんまるシェーダー1.3【作者@Mini_9321_VR】適応済\n　boushiAがメッシュ別　boushiBがメッシュ合成\n\n【耳飾り詳細】\n事前にダイナミックボーンを導入しておくと揺れものとして扱えます\n\n使い方\n耳飾り想定\nHierarchyでHeadを親にして位置調整してサイズ調整！！\n終わりです\n\n内容\n本体FBX　▲1290\n　ボーン2本仕込んでるので揺らすことが可能\n　Unitypackage同封\n　ダイナミックボーン設定済Prefab同封\nまんまるシェーダー2.0【作者@Mini_9321_VR】適応済\n\nVRchat内で自分が使っている帽子の配布です。\n帽子を使った自作アバターはこちら\n【https://mozukuumauma.booth.pm/items/1171379】\nアクセサリーにどうぞ、リボンは好きに外したり増やしたりしてね。\n基本VRchat前提で構成しています。\n\n以下テンプレ\n購入・DLを規約を守る意思表示とします\n作者【もずくん@mozukuumauma】に権利があります\n\n著作表示　○　（著作ってより、もずくんの使ったよって報告が欲しいだけです）\n商用利用　○　（テクスチャには商用利用可の物を一部利用してます）\n収益　○　（収益化された配信にもどんどん使ってくれ）\n色変えや改変　○　（どんどんやっていいの作って）\nパーツ流用　○　（購入者は好きにバラして改変して使っていけ）\n再配布　○　（データを渡すのも可だけどりどみも一緒に渡してね\n　　　　　　　　VRCアバターペデスタル・クローンも可だけどアバター元がだめならだめだよ）\nR18-18G　○　（モデリングソフト使える人ならすぐ脱がせれるよ）\n政治や宗教要素　×　（政治批判等の要素に限る、ネタでコ○ギョしたりするのは面白いので良し）\n取材や雑誌掲載TV等に映るの　○　（知らぬ間にって場合もあるので気にしないでいいのよ）\nアクセサリー利用でのVtuber活動　○　（逆にする人居るなら呼んでほしいレベル）","url":"https://booth.pm/ja/items/949810","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e2c0f6c5-5ba0-4d14-8298-1e93a6e970f3/i/949810/e94f9351-6bab-4660-b499-f09b893a664a_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tlPipmfnQfrvLbGmV87WvlWC6yLwOmDLW5z1ZAhUO3U="></script>
+    nonce="9kszzOUJ/qxru0+xwqEkV8Z5fBAImvntDdsLVwl3pIQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/949810/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               216
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/949810/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               216
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
