--- a/VRChat/34/949134.html
+++ b/VRChat/34/949134.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4XRRSt07TnQFaLe3Qtr903GoYHy0sWiQHvN8qrV+T9s="></script>
+    "c2fwTm0IIa+ddJOpcyVUC8oMdmMLOBQjn0rO9z+Kmz4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】Star Rod","description":"創作ファンタジー（？）な杖です。\n\n3Dアバター向けの小物2作品目。\n配色は悩みに悩んだのですが、あまりにもセンスがないです・・・\n色の変更は可能ですので、ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：Star Rod.fbx\n　　　　Circle01.psd\n　　　　Circle01.psd\n　　　　Rod.psd\n　　　　Star.psd\n　　　　Thorn top.psd\n　　　　Thorn.psd\n　　　　利用規約.tex\n\n\nモデルポリゴン数：722△\n\nマテリアル：6つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/949134","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/949134/c6ac68db-cf51-42cc-aba1-f48ce11a0179_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4XRRSt07TnQFaLe3Qtr903GoYHy0sWiQHvN8qrV+T9s="></script>
+    nonce="c2fwTm0IIa+ddJOpcyVUC8oMdmMLOBQjn0rO9z+Kmz4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/949134/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/949134/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
