updated at: 2023-04-25 20:57, らげたけver1.5 - らげたけのおみせ - BOOTH

--- a/VRChat/22/949022.html
+++ b/VRChat/22/949022.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XfkWpZN3HFK+OoH0nVZ3l6aCUj0HKiH+08DJms3+NOs="></script>
+    "k4m7tIK8yHJrwZK51UCzAlvui835brQPovTWo+9ivM4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"らげたけver1.5","description":"らげたけです。VRCHAT推奨モデルです。\nかわいいらげたけでvrchatをねり歩いたり歩かなかったりしましょう。\n\nホラーワールドに置くとホラーワールドが一層キュートに！！\n改変分解利用OK!やっていきましょう！\n\n\n仕様\n　・ポリゴン数　△15576\n　・humanoid形式\n　\n　・リップシンク内蔵\n\n　・テクスチャあり\n\n　・UnityPackage、FBX形式で入っています\n\n利用規約\n　・個人利用、OK。商用利用は要相談です。https://twitter.com/ragetake　←twitterからどうぞ。\n\n　・改変分解利用自由。\n\n　・ワールド用のリソースとしての利用可能。\n\n以下の行為は禁止します\n　・このデータを利用したいたずらや嫌がらせ（ホラーワールド以外の場所でしつこく追いかけまわす。視界をジャックして全画面に表示など）\n　・VRChat内で配布する（アバターペデスタル等）事\n\n　・このデータ、あるいはこのデータを基にした改変物を取り出せる状態で二次配布する事。\n\n　・このデータの製作者であることを騙る事。","url":"https://booth.pm/ja/items/949022","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/96ef0fd4-a352-46e3-8f16-59deaadb4c5a/i/949022/784ecf0b-d807-47ca-a460-de874fc663c3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XfkWpZN3HFK+OoH0nVZ3l6aCUj0HKiH+08DJms3+NOs="></script>
+    nonce="k4m7tIK8yHJrwZK51UCzAlvui835brQPovTWo+9ivM4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/949022/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               277
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/949022/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               277
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
