updated at: 2023-04-25 20:57, 【YK&#39;s Atelier】ヘアピン,クローバー、スペード、ダイヤ、ハート　4種セット - YK&#39;s Atelier - BOOTH

--- a/VRChat/26/948926.html
+++ b/VRChat/26/948926.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VMtC8hiGQBjtlrVz8BbcNZJpntdO9aR+cp8P7UDQApk="></script>
+    "LKSBuPnSln/bfYmRb+RjSmf2HwXYPazmqIvDAFEJUaY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】ヘアピン,クローバー、スペード、ダイヤ、ハート　4種セット","description":"トランプでおなじみの、クローバー、スペード、ダイヤ、ハートのヘアピンとなっております。\n\n3Dアバター向けの小物、ワンポイントとして制作しました。\nすでにありそう、すでに誰か作ってそうと思いながら作りました。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：クローバー.fbx\n　　　　スペード.fbx\n　　　　ダイヤ.fbx\n　　　　ハート.fbx\n\nモデルポリゴン数：クローバー　△120\n　　　　　　　　　スペード　　△87\n　　　　　　　　　ダイヤ　　　△66\n　　　　　　　　　ハート　　　△110\n（以上のポリゴン数にピン部分のポリゴン数､△24が付属しております。）\n\nマテリアル：各2つ（マーク部分とピン）\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/948926","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/948926/d58920e1-9315-434a-9e07-e199c9a384d5_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VMtC8hiGQBjtlrVz8BbcNZJpntdO9aR+cp8P7UDQApk="></script>
+    nonce="LKSBuPnSln/bfYmRb+RjSmf2HwXYPazmqIvDAFEJUaY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/948926/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               277
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/948926/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               277
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
