--- a/VRChat/98/948798.html
+++ b/VRChat/98/948798.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "77q5iLypJv6dozZTolVmh1i4UvxKYrPRaBi5YdFWjzg="></script>
+    "TZmSWNIfkimFEVLTvZXjVntPmr+pu1nOs/h8xdSShkM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"らげたけ灯篭","description":"らげたけが灯篭を持ってくれます。ご利益を感じる気がします。\nアバターの横に浮かせたり、家に飾ったりしましょう。\n改変分解もご自由に。\nボーンも入っているので、ダイナミックボーンをお持ちの方は揺らせます。\nライトは付属させていないので、お好みのライトをお付けください\n\n\n仕様\n　・各ポリゴン数\n灯篭　△850\nらげたけ　△2246\n計　△3096\n\n　・テクスチャ、ノーマルマップ、メタリックあり\n\n　・UnityPackage、FBX形式で入っています\n\n利用規約\n　・個人利用、商用利用共に自由。\n\n　・改変分解利用自由。\n\n　・VRChat内で配布する（ペデスタル）アバター、ワールド用のリソースとしての利用可能。\n\n以下の行為は禁止します\n　・このデータ、あるいはこのデータを基にした改変物を取り出せる状態で二次配布する事。\n\n　・このデータの製作者であることを騙る事。","url":"https://booth.pm/ja/items/948798","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/96ef0fd4-a352-46e3-8f16-59deaadb4c5a/i/948798/0af70e2e-3295-4b70-b2ca-9ebfab1fc390_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="77q5iLypJv6dozZTolVmh1i4UvxKYrPRaBi5YdFWjzg="></script>
+    nonce="TZmSWNIfkimFEVLTvZXjVntPmr+pu1nOs/h8xdSShkM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/948798/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/948798/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               82
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
