updated at: 2023-04-25 20:57, 桔梗の簪 - 和飾ノ助屋 - BOOTH

--- a/VRChat/79/948679.html
+++ b/VRChat/79/948679.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "WP2VyTR/A8vtGKeEKUuRnfh5r/5Qzhn0i/eNNxxa3ow="></script>
+    "TFXVqnJqZO5ESq2dWKoapcPcg5O71Zm6DMcyWPDw5qo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"桔梗の簪","description":"主にVRchatでの利用を想定した桔梗モチーフの簪の3Dモデルとなります。\n\n【ポリゴン数】\n❶‐312\n❷‐383\n❸‐863\n\n【使用Shader】\nユニティちゃんトゥーンシェーダー Ver.2.0.7\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n【ファイル内容】\n･unitypackage\n\n【利用にあたって】\n〇VRchatへのアップロード\n〇アバターペデスタルへの利用\n〇モデルを改変しての利用\n〇商用利用(データそのものを販売しない場合のみ)\n〇動画制作での使用\n\n×購入者以外の方がデータを取得出来る状態での利用\n×同梱されているデータそのものの販売\n×再配布(改変の有無問わず禁止)\n\n-更新履歴-\n2018.7/31 販売開始\n2020.2/10 ShaderをUTS2に変更\n-------------------------------------------------\n質問･不具合などあればご一報ください。\n【Twitter】https://twitter.com/Sdnsk","url":"https://booth.pm/ja/items/948679","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/43027730-b2d6-42a7-99e8-a3d369411f2e/i/948679/09dfe4f0-6752-4557-aa02-c4cb2a416552_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WP2VyTR/A8vtGKeEKUuRnfh5r/5Qzhn0i/eNNxxa3ow="></script>
+    nonce="TFXVqnJqZO5ESq2dWKoapcPcg5O71Zm6DMcyWPDw5qo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/948679/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               216
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/948679/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               216
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
