--- a/VRChat/73/948573.html
+++ b/VRChat/73/948573.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kRHwB/f+9avCnIhV10lM1TY6kOms0n3PoJ7nBVbWExs="></script>
+    "NWMBuiyPt4isJ1hQlDcsc29htvjzP8rSDBoHyQ6LF1o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat推奨アバタージト目のジト","description":"最新版はZito0_vrc3.zipです\n07/31 : 袖のウェイトの不具合を修正（1-\u003e2）\n08/01 : Unityパッケージを整備（2-\u003e3）\n\nｰｰｰｰｰｰｰｰｰｰｰｰｰｰｰｰ\nじと Ver.0.5 2018/07/30 初版　ぽり数12833\n作者:YU\n\nこのモデルはVRchatで利用することを目的としたモデルです。\n少し中途半端な部分があるので、切り刻んで使ってもよいです。\n大幅なアップデートがあるかもしれません。\nトライアル版なのでやすめ（たぶん）\n\n★入っているもの\nマテリアルとかテクスチャ\n＋テクスチャが少し（シャチカモフラージュ柄とか、瞳パターンとか）\nボーン入りFBX\nボーン入りBrender\nカスタムオーバーライド、リップシンクまで設定済のUnityパッケージ\n\n★推奨するもの\n・VRChat含め、ゲームでの使用\n・モデル改変（いかなる改変もどうぞ）\n\n\n★このモデルはボーンに　やぐら(https://twitter.com/adm_ygr)さまの\n「Humanoid_Armature for VRChat」Vre.2018/07/11 初版を使用しています。\n\n\n★口が開いたままだよ→仕様です。\n\n★簡単導入方法！つき！\n\n\nご意見ご要望、バグ報告、感想などはこちらにどうぞ。\nちまちまなおすかもしれません。\nhttps://marshmallow-qa.com/you_when_xx?utm_medium=url_text\u0026utm_source=promotion","url":"https://booth.pm/ja/items/948573","offers":{"priceCurrency":"JPY","@type":"Offer","price":"900"},"image":"https://booth.pximg.net/c/620x620/b7fca586-9480-45da-aff4-af2714c85b09/i/948573/a4998fc1-cce7-4319-8b37-22889720d621_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kRHwB/f+9avCnIhV10lM1TY6kOms0n3PoJ7nBVbWExs="></script>
+    nonce="NWMBuiyPt4isJ1hQlDcsc29htvjzP8rSDBoHyQ6LF1o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/948573/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               434
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/948573/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               434
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
