--- a/VRChat/61/947761.html
+++ b/VRChat/61/947761.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dCpKy7ftwHH6+DfnjYWrMlfaqQSUYh0A/6rrnEbFY1o="></script>
+    "ItxF4AVEn+kUeLi7tQ/7C9XHH1VusSN54pGIbF50YB8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スチームパンクハット","description":"主にVRChat向けアクセサリとして使用できるスチームパンク風ハットです。\nVRChat以外の動画作品･ゲーム等での利用も可能です。\n\nポリゴン数 2295\nマテリアル数 2\n\n歯車部分に透過テクスチャを使用していますので、対応するシェーダーを使用してください。\n歯車用のテクスチャとして以下の3つを同梱しています。ご利用のシェーダーに合わせてお使いください。\nGearRGB.png(透過なし)\nGearRGBA.png(透過あり)\nGearAlpha.png(アルファマップ)\n\nサンプルマテリアル用としてMITライセンスに基づきCubed's Unity Shadersを同梱しています。\nCopyright (c) 2017 Nicholas Benge\nReleased under the MIT license\nhttps://github.com/cubedparadox/Cubeds-Unity-Shaders/blob/master/LICENSE\n\n[利用規約]\n・商用非商用を問わず、VRChatでの利用及びゲーム、動画、静止画等のコンテンツ制作における素材として本データ(3Dモデル及びテクスチャ)を使用することを許諾する\n・本データを改変し使用することを許諾する\n・本データの著作権は作者(満天星躑躅)に帰属するが、使用に際しクレジット等の著作権表記は不要とする\n・本データを許可なく再配布することを禁止する\n・本データを政治的パフォーマンス、ヘイトスピーチ、その他公序良俗に反する目的で使用することを禁止する","url":"https://booth.pm/ja/items/947761","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/947761/d89abb37-181a-4b07-b5bb-67fc69cfbc40_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dCpKy7ftwHH6+DfnjYWrMlfaqQSUYh0A/6rrnEbFY1o="></script>
+    nonce="ItxF4AVEn+kUeLi7tQ/7C9XHH1VusSN54pGIbF50YB8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/947761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               204
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/947761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               204
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
