updated at: 2023-04-25 20:58, 大型両手剣 &quot;Schwer Klinge&quot; - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/71/943371.html
+++ b/VRChat/71/943371.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "y8nLtNYOFARLuRThe3232r4uE5pisjWhdrZXvbtWAeQ="></script>
+    "RawMdq7A0MCnwBtPteaiyaZYb9Ai3++BMYYM0KYzL0w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"大型両手剣 \"Schwer Klinge\"","description":"当工房製の重量片手剣を両手剣サイズに拡大した重量型両手剣です。\n全長が1.48mと、かなり大きいので注意！　必要に応じてスケールを調整して下さい。\n\nポリゴン数 △1816\nテクスチャ 2048*2048 3枚\n\nSketchfabで3Dモデルの閲覧もできます。\n\n※２枚目のモデル\nシンヤの模造武具 様 ブレイダーちゃん \nhttps://booth.pm/ja/items/954766","url":"https://booth.pm/ja/items/943371","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/943371/65d04845-5f38-4492-9faa-404ab77546fc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y8nLtNYOFARLuRThe3232r4uE5pisjWhdrZXvbtWAeQ="></script>
+    nonce="RawMdq7A0MCnwBtPteaiyaZYb9Ai3++BMYYM0KYzL0w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -164,7 +166,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/943371/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
@@ -179,14 +181,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/943371/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
