--- a/VRChat/63/946563.html
+++ b/VRChat/63/946563.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uS5x56dbZcotX6UD9xYsM4UC+RLArEOClVnZcPdyrw8="></script>
+    "91H0hTwjb9hEJg7JEnZ8O5hCq8zhg/IVkTzhMzPKdTI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat等]ずんだ式オリジナル武器1","description":"【VRC等向け】ずんだ式オリジナル武器\n\n製作者：Zunda\n広報用Twitter：@FortuneZunda\n\n画像1枚目：metasequoia上でのSS\n　　2枚目：metasequoiaでのアウトラインありの画像\n　　3枚目：metasequoiaでのレンダリング画像\n\nデータ内容\n・FBXファイル\n・3DSファイル\n・利用規約TXTファイル\n\n詳細\n・頂点数 555\n・総面数 658\n・三角数 658\n\n・オブジェクト数 6\n　・刃部分（上下緑）\n　・タンク部分（中央緑）\n　・インナーフレーム（グレー）\n　・パイプ接続部（グレー）\n　・メインフレーム（白）\n　・パイプ（白）\n\n・マテリアル数 3\n　・刃タンク部分　　　　【緑】\n　・インナーフレーム等　【グレー】\n　・メインフレーム等　　【白】\n\nテクスチャではなくマテリアルを直接指定しているのでunity上にて簡単に色の変更が可能です。\n\n基本的な規約\n本データおよび改変物をゲーム、動画等への使用は基本的にOKです。クレジットの表記も不要ですができれば当方の広報用Twitter（@FortuneZunda）を描いていただけると幸いです。\n\n色の変更はもちろんのこと、改変等もOK。商用利用等もOKです。\n\nですが本データまたは改変物の再配布や販売等は禁止します。\nまたゲーム等への使用は可能ですがデータがそのまま取り出せる状態での配布販売はNGです。\n政治的宗教的に関する利用、自作発言等も禁止します。\n\n本データの著作権は放棄していません。本データの著作権は製作者が有します。\nまた本データの使用に際して発生したいかなる問題や障害において、当方は一切の責任を負いません。\n\nご不明な点がございましたらお気軽に当方ツイッター@FortuneZundaまでご連絡ください。\n\n2018/7/29\n\n","url":"https://booth.pm/ja/items/946563","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3a55c967-d985-4e72-833d-9ae2c7a493e5/i/946563/b2a731d4-f2bf-46ca-a907-3facfaa6ca5a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uS5x56dbZcotX6UD9xYsM4UC+RLArEOClVnZcPdyrw8="></script>
+    nonce="91H0hTwjb9hEJg7JEnZ8O5hCq8zhg/IVkTzhMzPKdTI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/946563/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/946563/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
