updated at: 2023-04-25 20:59, 重量片手剣 &quot;The Stahl&quot; (Heavy Sword) - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/53/946253.html
+++ b/VRChat/53/946253.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zVavpSfZhpkGVa9II6vCEdO9qqxmWXyqCNNJ6qQrY7Q="></script>
+    "vmjYu/05vNwDl65CAbf7MAZaEQwSzR680vu2KlJ8eYQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"重量片手剣 \"The Stahl\" (Heavy Sword)","description":"質量を以って叩き斬ることを意識した重量片手剣です。\n体格に合わせて、2つの刀身長から選択できます。\n\nSketchfabで3Dモデルの閲覧もできます。\n\nポリゴン数 △1010（2種類共通）\nテクスチャ 2048*2048 3枚（2種類共通）\n\nUnityパッケージ同梱、すぐにアバターにセットアップできます\n\n2枚目の使用例画像\n・盾：当工房製 Kite Shield（歩兵用中型盾）\nhttps://garden-of-ashen.booth.pm/items/1006978\n\n・モデル：KUKURi様 桜川虎子\nhttps://booth.pm/ja/items/987801","url":"https://booth.pm/ja/items/946253","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/946253/87e4d901-eb81-4d38-a638-3c5beba23c75_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zVavpSfZhpkGVa9II6vCEdO9qqxmWXyqCNNJ6qQrY7Q="></script>
+    nonce="vmjYu/05vNwDl65CAbf7MAZaEQwSzR680vu2KlJ8eYQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -121,6 +121,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -165,7 +167,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/946253/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
@@ -180,14 +182,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/946253/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
