updated at: 2023-04-25 20:59, [3D小物]マジックハンド - Sharono屋 - BOOTH

--- a/VRChat/28/941328.html
+++ b/VRChat/28/941328.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3KK60W7qYi7VaopuvuVuG7BdI8EKmg+PcYyKsMH//JY="></script>
+    "YSRArJDFADXmNriKvbcKycgbots/4VumDRI2UT08YCY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3D小物]マジックハンド","description":"主にVRChatでの利用を目的としたマジックハンドの3Dモデルです。\nシェイプキーで指部分の変更およびリンク部分が伸びます。\n伸びるシェイプキーを握りのアニメーションに入れることで、\n伸び縮みを自在に操って楽しめます。\n(設定の仕方がわからない？リプでもDMでもinviteでもなんでもください。)\n\nblendファイルも付属しておくので自由に改造してください。\nテクスチャはえいやでサブスタ塗装のものを2種。(デフォは赤と黄色のおもちゃ風です。)\n\n手に何か持たせたいけど、武器はちょっと・・・というそこのあなた。\n最近移動するの面倒だから手が伸びないかなと思っているそこのあなた。\nどうぞ。\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage　⁺　blend\n　ポリゴン数：約3000\n　その他：シェイプキー4種在り(ぐー、ちょき、サムズアップ、伸びる)\n　テクスチャ：2種在り(おもちゃ風、業務用)\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n　\nその他\n　使ってる報告してくれると泣いて喜びます。\n　不具合あったらこっそり教えてね。\n","url":"https://booth.pm/ja/items/941328","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/941328/be7da0e5-3fcc-41a5-a987-3512ee6d073e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3KK60W7qYi7VaopuvuVuG7BdI8EKmg+PcYyKsMH//JY="></script>
+    nonce="YSRArJDFADXmNriKvbcKycgbots/4VumDRI2UT08YCY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/941328/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/941328/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
