updated at: 2023-04-25 20:59, VRChat向け　ダンボールの羽と輪 - つぐの店 - BOOTH

--- a/VRChat/19/945519.html
+++ b/VRChat/19/945519.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UAMu+EpJte/9tUe8fpuOF/o8BoHyFbDckdyy99JXrpQ="></script>
+    "z4dtI0oVjn7O02glOhs0dBBeRM4jX2FhpTokqosenpY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ダンボールの羽と輪","description":"Vrchatでの使用を想定していますが、その他の用途でもご使用いただけます。\n\n・ポリゴン数　△520\n\n利用規約\n・本モデルをダウンロードした時点で本利用規約に同意したものとします。\n・利用規約は予告なく変更する場合があり、最新のものが適用されます。\n・本データ、改変されたデータの著作権は制作者つぐに帰属します。\n・再配布は禁止。商用利用、改変は可能です。\n・他人に迷惑をかけるような使用はしないでください。\n・いかなる場合においても、このモデルによって生じた責任を負いかねます。\n自己責任での使用をお願いします。\n\n連絡先\n・ツイッター\n@Tsugu_VRC\n\n・Mail\ntsugu.vrc@gmail.com \n\nアップデート\n\n2020/5/21　\n 1.1 .objファイルの追加\n 2.0 利用規約の更新、モデルの差し替え","url":"https://booth.pm/ja/items/945519","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3e3d8485-d999-4652-856e-1c6203a7e1e6/i/945519/90f7e66f-3327-4759-a111-c9ee998c5b79_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UAMu+EpJte/9tUe8fpuOF/o8BoHyFbDckdyy99JXrpQ="></script>
+    nonce="z4dtI0oVjn7O02glOhs0dBBeRM4jX2FhpTokqosenpY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/945519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              803
+                              805
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/945519/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              803
+                              805
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
