updated at: 2023-04-25 21:01, たまこ＆モカMMDセット - かぷちやのぶーす - BOOTH

--- a/VRChat/40/944440.html
+++ b/VRChat/40/944440.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Qk/0NZ8TCeu6gA6iIn+NxYBGgKtNMSIieAgZhQpaVXo="></script>
+    "QRolI6RD+jSGESZMG0WsYgj5TYHCF78APPm1IfyI7kE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"たまこ＆モカMMDセット","description":"多摩ワールドコーヒーのPRキャラクター たまこ モカ のMMD用のモデルデータのセットです。 VRChat使用可。\n\nたまこの本やグッズ等がありますので\nブースのその他の商品もぜひ見ていってください。\n\nFANBOXも開設中です。\n\n\n■ 利用規約\n・著作権は全てかぷち屋のしあ・ぷもにあります。\n・商用利用・再配布は禁止します。\n・改変はOKです。\n\n\n（再配布の中にVRChatへのアップロードは含まれません）","url":"https://booth.pm/ja/items/944440","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"123"},"image":"https://booth.pximg.net/c/620x620/fb6b1fad-86c2-45e3-89e8-e117c662ecc2/i/944440/ab5712ff-cdcb-4733-a833-73dd31d491e8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Qk/0NZ8TCeu6gA6iIn+NxYBGgKtNMSIieAgZhQpaVXo="></script>
+    nonce="QRolI6RD+jSGESZMG0WsYgj5TYHCF78APPm1IfyI7kE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944440/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               568
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944440/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               568
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
