updated at: 2023-04-25 21:01, 「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」 - シンヤの模造武具 - BOOTH

--- a/VRChat/39/944339.html
+++ b/VRChat/39/944339.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+rulZacCPc/dJGs8FBitTI1Y3uJ7CTodv02DsCJc43Q="></script>
+    "oeynzY/O35kepRcne7LNkKtIVZt3vh4kPDBzPm8borw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」","description":"VRchatでの使用を目的にした武器のモデルデータです。\nサブスタンスペインターを使って作成したメタリックでかっこいい質感をお楽しみください！\n\nunityパッケージデータ\nfbxデータ\nテクスチャデータ\n\n△ポリゴン数412\n\nお問い合わせについてはモデル内に作成者の情報などが記載されていますのでご確認ください。\n\n2018/12/10\nver1.1　マテリアルの数の変更とマテリアル統合モデルを用意しました。","url":"https://booth.pm/ja/items/944339","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/944339/f817a0b9-0e5d-428f-983d-5fb8f730f1df_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+rulZacCPc/dJGs8FBitTI1Y3uJ7CTodv02DsCJc43Q="></script>
+    nonce="oeynzY/O35kepRcne7LNkKtIVZt3vh4kPDBzPm8borw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/944339/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/944339/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
